@@ -58,6 +58,9 @@
     <file url="file://$PROJECT_DIR$/etc/res/unbuilt/custom/hud/sloth/buttons/square/grid.res/image/0.png" charset="windows-1252" />
     <file url="file://$PROJECT_DIR$/etc/res/unbuilt/custom/hud/sloth/buttons/square/grid.res/image/1.png" charset="windows-1252" />
     <file url="file://$PROJECT_DIR$/etc/res/unbuilt/custom/hud/sloth/buttons/square/grid.res/image/2.png" charset="windows-1252" />
+    <file url="file://$PROJECT_DIR$/etc/res/unbuilt/custom/hud/sloth/buttons/square/markers.res/image/0.png" charset="windows-1252" />
+    <file url="file://$PROJECT_DIR$/etc/res/unbuilt/custom/hud/sloth/buttons/square/markers.res/image/1.png" charset="windows-1252" />
+    <file url="file://$PROJECT_DIR$/etc/res/unbuilt/custom/hud/sloth/buttons/square/markers.res/image/2.png" charset="windows-1252" />
     <file url="file://$PROJECT_DIR$/etc/res/unbuilt/custom/hud/sloth/buttons/square/trash.res/image/0.png" charset="windows-1252" />
     <file url="file://$PROJECT_DIR$/etc/res/unbuilt/custom/hud/sloth/buttons/square/trash.res/image/1.png" charset="windows-1252" />
     <file url="file://$PROJECT_DIR$/etc/res/unbuilt/custom/hud/sloth/buttons/square/trash.res/image/2.png" charset="windows-1252" />
